--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,7 @@ cython_debug/
 /workshop/data/WP96_4Pos_B4-10_DAPI_ngff.ome.zarr
 /workshop/data/CellDivision_T10_Z15_CH2_DCV_small.ome.zarr
 /workshop/data/WP96_4Pos_B4-10_DAPI.ome.zarr
+/workshop/data/CellDivision_T10_Z15_CH2_DCV_small_ngff.ome.zarr/**
+/workshop/data/WP96_4Pos_B4-10_DAPI_ngff.ome.zarr/**
+/workshop/data/CellDivision_T10_Z15_CH2_DCV_small.ome.zarr/**
+/workshop/data/WP96_4Pos_B4-10_DAPI.ome.zarr/**
