--- a/workshop/env_zenapi_essential.yml
+++ b/workshop/env_zenapi_essential.yml
@@ -7,26 +7,42 @@
 
 name: zenapi
 channels:
+  - pytorch
+  - nvidia
   - conda-forge
 dependencies:
   - python=3.11
   - colormap
   - czifile
+  - cudnn=9.13.1.26
+  - dask
+  - dask-image
+  - docker-py
   - docutils
+  - fastapi
+  - flask
   - fsspec
   - ipyfilechooser
   - ipykernel
   - magicgui
+  - marimo
   - matplotlib
   - napari>=0.6.5
+  - numpy
   - ome-zarr
+  - opencv
   - pandas
   - pip
+  - plotly
   - pooch
   - pyqt=5
   - pyqtgraph
   - pytest
   - pytest-cov
+  - pytorch::pytorch=2.5.1
+  - pytorch::pytorch-cuda=12.4
+  - python-box[all]
+  - python-dateutil
   - qasync
   - requests
   - scikit-image>=0.19.3
@@ -34,31 +50,51 @@ dependencies:
   - setuptools
   - shapely
   - superqt
+  - pytorch::torchvision=0.20.1
   - tqdm
   - validators
   - wheel
+  - xarray
+  - xarray[complete]
+  - xmltodict
+  - zarr
 
   - pip:
       - aicspylibczi>=3.3.1
       - betterproto==2.0.0b7 # sometimes this does not get installed - try manually
       - betterproto[compiler]==2.0.0b7 # sometimes this does not get installed - try manually
+      - bioio
+      - bioio-czi
+      - bioio-imageio
+      - bioio-ome-tiff
+      - bioio-ome-zarr
+      - czmodel[pytorch]>=5
       - cztile
       - czitools
       - grpclib
       - loguru
+      - mowidget
+      - napari-assistant
       - napari-brightness-contrast
+      - napari-clusters-plotter
       - napari-crop
+      - napari-czann-segment
       - napari-czitools
       - napari-layer-details-display
       - napari-ome-zarr
       - napari-plugin-search
+      - napari-simpleitk-image-processing
+      - napari-skimage-regionprops
       - ngff-zarr
       - ngff-zarr[dask-image]
       - ngff-zarr[validate]
+      - onnxruntime-gpu==1.19.0
       - pylibCZIrw
       - ryomen
       - tiler
       - wigglystuff
+      - GPUtil
+      - psutil
 
 # Create an environment - use conda or mamba
 # conda env create --file env_zenapi_essential.yml
