--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,5 @@ cython_debug/
 /workshop/data/WP96_4Pos_B4-10_DAPI_ngff.ome.zarr/**
 /workshop/data/CellDivision_T10_Z15_CH2_DCV_small.ome.zarr/**
 /workshop/data/WP96_4Pos_B4-10_DAPI.ome.zarr/**
+/workshop/zen_api/OverViewScan_seg_planetable.csv
+/workshop/zen_api/OverViewScan_seg.czi
